# hydrodiy

./: .coveragerc  .gitattributes  .gitignore  LICENSE  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  bitbucket-pipelines.yml  contributors.txt  env.yml  env_hydrodiy.yml  env_mini.yml  env_mini_v2.yml  env_nriv_v2.yml  grep_code.sh  hydrodiy_updates.txt  install.py  install_hydrodiy.sh  listmembers.py  package_config.json  package_files.txt  pylintrc  pyproject.toml  requirements.in  requirements.txt  run_profile.py  run_tests.py  setup.cfg  setup.py  uninstall.py
.azure_devops/: azure-pipelines.yml
.circleci/: config.yml
.github/workflows/: python-package-conda.yml
examples/: data_get_climate_grids.py  data_get_climate_indices.py  data_get_kiwis_data.py  gis_delineate_catchment.py  plot_australian_map.py  plot_draw_boxplot.py  plot_draw_violinplot.py  plot_ensemble.py  run_all_examples.py  verify_ensemble.py
hydrodiy/: __init__.py  _version.py
hydrodiy/data/: baseflow.py  c_baseflow.c  c_baseflow.h  c_dateutils.c  c_dateutils.h  c_dutils.c  c_dutils.h  c_hydrodiy_data.pyx  c_qualitycontrol.c  c_qualitycontrol.h  c_var2h.c  c_var2h.h  c_variable2fixed.c  c_variable2fixed.h  containers.py  dutils.py  hyclimind.py  hykiwis.py  hywap.py  qualitycontrol.py  signatures.py
hydrodiy/data/data/: storages.csv
hydrodiy/data/tests/: baseflow_RDF_EC.csv  conftest.py  test_hydata_baseflow.py  test_hydata_containers.py  test_hydata_dateutils.py  test_hydata_dutils.py  test_hydata_hyclimind.py  test_hydata_hykiwis.py  test_hydata_hywap.py  test_hydata_qualitycontrol.py  test_hydata_signatures.py
hydrodiy/gis/: c_catchment.c  c_catchment.h  c_grid.c  c_grid.h  c_hydrodiy_gis.pyx  c_points_inside_polygon.c  c_points_inside_polygon.h  grid.py  gutils.py  oz.py
hydrodiy/gis/data/: AWAP_GRID.hdr  AWRAL_GRID.hdr  WATERDYN_GRID.hdr  australia_coastline_simplified.dbf  australia_coastline_simplified.shp  australia_coastline_simplified.shx  drainage_divisions_lines_simplified.shp  ne_10m_admin_0_countries_australia.dbf  ne_10m_admin_0_countries_australia.shp  ne_10m_admin_0_countries_australia.shx  ne_50m_admin_0_countries_australia.dbf  ne_50m_admin_0_countries_australia.shp  ne_50m_admin_1_states_australia.dbf  ne_50m_admin_1_states_australia.shp  ne_50m_admin_1_states_australia.shx  rbasin_lines_simplified.dbf  rbasin_lines_simplified.shp  rbasin_lines_simplified.shx
hydrodiy/gis/tests/: canberra.json  demtest.hdr  fdtest.bil  fdtest_acc.bil  fdtest_acc.hdr  flowdir_223202.hdr  grid_cells_inside_polygon.csv  grid_test.bil  grid_test.hdr  header.hdr  polygon_inside.csv  test_hygis_grid.py  test_hygis_gutils.py  test_hygis_oz.py  test_hygis_points_inside_polygon.py
hydrodiy/hydata/: _datacheck.c  _datacheck.pyx  baseflow.py  c_baseflow.c  c_baseflow.h  c_hydata.c  c_hydata.pyx  c_lindetect.c  c_lindetect.h  datacheck.py  dutils.py  evaplib.py  hyclimind.py  hyfao.py  hykiwis.py  hywap.py  meteolib.py
hydrodiy/hydata/tests/: test_hydata_baseflow.py  test_hydata_datacheck.py  test_hydata_dutils.py  test_hydata_hyclimind.py  test_hydata_hyfao.py  test_hydata_hykiwis.py  test_hydata_hywap.py  test_hydata_vuhydro.py
hydrodiy/hygis/: gutils.py  oz.py
hydrodiy/hygis/data/: australia.pngw  get_oz_data.r  oz_data.csv  oz_states_centroids.csv  oz_states_centroids.csv~
hydrodiy/hygis/tests/: polygon.csv  test_hygis_gutils.py  test_hygis_oz.py
hydrodiy/hyio/: binfile.py  csv.py  iutils.py  log.py  minilog.py  script_template.py  script_template_plot.py  script_template_process.py
hydrodiy/hyio/tests/: 207004_monthly_total_01.csv  binfile_testdata.binh  minilog_fun.py  test_hyio_binfile.py  test_hyio_csv.py  test_hyio_iutils.py  test_hyio_minilog.py
hydrodiy/hymod/: _metrics.c  _metrics.pyx  c_crps.c  c_crps.h  c_gr2m.c  c_gr2m.h  c_gr4j.c  c_gr4j.h  c_hymod.pyx  c_hymod_utils.c  c_hymod_utils.h  calib.py  calibration.py  crps.c~  errfun.py  gr2m.py  gr4j.py  metrics.py  model.py  modelfactory.py  mutils.py  network.py  params.py  turcmezentsev.py
hydrodiy/hymod/models/: ann.py  c_dummy.c  c_dummy.h  c_gr2m.c  c_gr2m.h  c_gr4j.c  c_gr4j.h  c_hymod_models.pyx  c_hymod_models_dummy.pyx  c_hymod_models_gr2m.pyx  c_hymod_models_gr4j.pyx  c_hymod_models_lagroute.pyx  c_hymod_models_sac18.pyx  c_hymod_models_utils.pyx  c_lagroute.c  c_lagroute.h  c_sac18.c  c_sac18.h  c_uh.c  c_uh.h  c_utils.c  c_utils.h  dummy.py  fland1.f  gr2m.py  gr4j.py  lagroute.py  turcmezentsev.py
hydrodiy/hymod/tests/: GR2M.csv  profile_hymod_gr4j.py  test_hymod_ann.py  test_hymod_calibration.py  test_hymod_dummy.py  test_hymod_errfun.py  test_hymod_gr2m.py  (+7 more)
hydrodiy/hyplot/: .ringplot.py (magpie-XPS-12-9Q33's conflicted copy 2014-04-15).swp  _match.c  _match.pyx  boxplot.py  c_match.c  c_match.h  ninoplot.py  ninoplot_events.json  putils.py  ringplot.py  simplot.py
hydrodiy/hystat/: _sutils.c  _sutils.pyx  c_ar1.c  c_ar1.h  c_hystat.c  c_hystat.pyx  fitdist.py  linreg.py  mcmc.py  sutils.py  transform.py
hydrodiy/hywafari/: .utils.py.swp  wafarirun.py  wdata.py  wplots.py  wreview.py  wutils.py
hydrodiy/io/: csv.py  html.py  hyruns.py  iutils.py  script_template_bash.sh  script_template_console.py  script_template_plot.py  script_template_process.py  script_template_simple.py  zipjson.py
hydrodiy/plot/: bayesplot.py  boxplot.py  ensplot.py  gridplot.py  putils.py  simplot.py  violinplot.py
hydrodiy/stat/: ADinf.c  ADinf.h  AnDarl.c  AnDarl.h  armodels.py  bayesutils.py  bootstrap.py  c_andersondarling.c  c_andersondarling.h  c_ar1.c  c_ar1.h  c_armodel.c  c_armodel.h  c_armodels.c  c_armodels.h  c_crps.c  c_crps.h  c_dscore.c  c_dscore.h  c_hydrodiy_stat.pyx  c_olsleverage.h  c_olspredfact.c  c_olspredfact.h  censored.py  distributions.py  fitdist.py  linreg.py  metrics.py  mvnc.py  sutils.py  transform.py
ideas/: expand_grid.py  gen_web_compar.py  gr4j_gr4j.py  test_skillscore.py  xv_tests.py
src/hydrodiy/: __init__.py
(+211 files in other folders)
