[build-system]
requires = [
    "setuptools >= 74.1",
    "cython >= 3.0.10",
    "numpy >= 1.20.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "hydrodiy"
authors = [{name = "Julien Lerat, CSIRO Environment", email="julien.lerat@csiro.au"}]
description = "Python toolbox for hydrological data processing"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["data processing", "rainfall", "streamflow", "rainfall-runoff", "hydrology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python 3",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Hydrology"
]    
requires-python = ">= 3.8"
dependencies = [
    "numpy >= 1.20.0",
    "scipy >= 1.0.0",
    "pandas >= 2.0.0"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/csiro-hydroinformatics/hydrodiy"
Repository = "https://github.com/csiro-hydroinformatics/hydrodiy"

[tool.setuptools]
ext-modules = [
    {name = "c_hydrodiy_data", sources = [
            "src/hydrodiy/data/c_hydrodiy_data.pyx",
            "src/hydrodiy/data/c_dateutils.c",
            "src/hydrodiy/data/c_qualitycontrol.c",
            "src/hydrodiy/data/c_dutils.c",
            "src/hydrodiy/data/c_var2h.c",
            "src/hydrodiy/data/c_baseflow.c"
        ], include-dirs = ["numpy.get_include()"]},
    {name = "c_hydrodiy_stat", sources = [
            "src/hydrodiy/stat/c_hydrodiy_stat.pyx",
            "src/hydrodiy/stat/c_crps.c",
            "src/hydrodiy/stat/c_dscore.c",
            "src/hydrodiy/stat/c_olsleverage.c",
            "src/hydrodiy/stat/c_armodels.c",
            "src/hydrodiy/stat/ADinf.c",
            "src/hydrodiy/stat/AnDarl.c",
            "src/hydrodiy/stat/c_andersondarling.c",
            "src/hydrodiy/stat/c_paretofront.c"
        ], include-dirs = ["numpy.get_include()"]},
    {name = "c_hydrodiy_gis", sources = [
            "src/hydrodiy/gis/c_hydrodiy_gis.pyx",
            "src/hydrodiy/gis/c_grid.c",
            "src/hydrodiy/gis/c_catchment.c",
            "src/hydrodiy/gis/c_points_inside_polygon.c"
        ], include-dirs = ["numpy.get_include()"]}
]

[tool.pytest.ini_options]
testpaths = [
    "src/hydrodiy/data/tests",
    "src/hydrodiy/gis/tests",
    "src/hydrodiy/io/tests",
    "src/hydrodiy/plot/tests",
    "src/hydrodiy/stats/tests"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "hydrodiy.__version__"}
