[build-system]
requires = [
    "setuptools >= 64",
    "cython >= 3.0.10",
    "numpy >= 1.20.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "hydrodiy"
version = "2.9"
authors = [{name = "Julien Lerat, CSIRO Environment", email="julien.lerat@csiro.au"}]
description = "Python toolbox for hydrological data processing"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["data processing", "rainfall", "streamflow", "rainfall-runoff", "hydrology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python 3",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Hydrology"
]    
requires-python = ">= 3.8"

dependencies = [
    "setuptools",
    "numpy>=1.20.0",
    "scipy>=1.0.0",
    "pandas>=2.0.0",
    "cython>=3.2.4",
    "matplotlib>=3.7.5",
    "pip>=25.0.1",
    "pyproj>=3.5.0",
    "pyshp>=2.3.1",
    "requests>=2.32.4"
]

[dependency-groups]
dev = [
    "anybadge>=1.16.0",
    "ruff>=0.15.12",
    "pytest>=8.3.5",
    "pytest-allclose>=1.0.0",
    "pytest-cov>=5.0.0"
]

[project.urls]
Homepage = "https://github.com/csiro-hydroinformatics/hydrodiy"
Repository = "https://github.com/csiro-hydroinformatics/hydrodiy"

[tool.pytest.ini_options]
testpaths = [
    "src/hydrodiy/data/tests",
    "src/hydrodiy/gis/tests",
    "src/hydrodiy/io/tests",
    "src/hydrodiy/plot/tests",
    "src/hydrodiy/stats/tests"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.pyx", "*.pxd", "*.c", "*.h"]

[tool.uv]
no-build-isolation-package = ["hydrodiy"]
default-groups = []

[tool.ruff]
exclude = [
    "src/hydrodiy/io/script_template_cmd.py",
    "src/hydrodiy/io/script_template_plot.py",
    "src/hydrodiy/io/script_template_minimal.py"
    ]
